# ThriveAIModuleProject

./: Chronic Disease Indicator Questions Corpus Generation.py  Get_Ethical_Guidelines Function Using BERT.py  Get_Ethical_Guidelines v2.ipynb  Get_Ethical_Guidelines.ipynb  Pandas DF to PostGres.py  PostGresDB Load.py  README.md  cdc_chronic_disease_data_questions.csv
Python_Ethical_Guidelines/: README.md  pyproject.toml
Python_Ethical_Guidelines/src/ethical_guidelines/: _init_
