[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethical_guidelines"
version = "0.0.1"
authors = [
  { name="Frank Metty", email="fmetty@gmail.com" },
]
description = "collection of functions to generate a random number assigned to a classification of ethical guidelines when asked a question
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fmetty90/ThriveAIModuleProject"
Issues = "https://github.com/fmetty90/ThriveAIModuleProject"